# autono

./: .gitignore  AGENTS.md  Cargo.toml  README.md  autono.example.toml  reforge.example.toml  release-plz.toml
.githooks/: README.md  commit-msg
.github/workflows/: ci.yml  release-plz.yml
docs/: AGENTS.md  README.zh-CN.md
prompts/: completion_check.md  completion_repair.md  discussion_monitor.md  implementation.md  implementation_repair.md  review_feedback.md  self_review.md  self_review_repair.md  triage.md
prompts/_partials/: review_feedback_comment.md  review_feedback_diff.md  review_feedback_summary.md  review_feedback_thread.md
scripts/: setup-githooks.sh
src/: codex_runner.rs  config.rs  daemon.rs  daemon_tests.rs  error.rs  git_workspace.rs  github.rs  github_types.rs  lib.rs  main.rs  prompt_templates.rs  review_feedback.rs  store.rs  workflow.rs
src/daemon/: actions.rs  comments.rs  effects.rs  gates.rs  mod.rs  requests.rs
src/github/: auth.rs  mod.rs  models.rs  review_state.rs
src/runner/: mod.rs
src/runner/codex/: command.rs  mod.rs  prompts.rs  results.rs  validation.rs
