[package]
name = "autono"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lints.clippy]
too_many_arguments = "deny"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.40", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.12"
